srun.err
wandb: Currently logged in as: eirikreiestad (eirikreiestad-ntnu) to https://api.wandb.ai. Use `wandb login --relogin` to force relogin
Traceback (most recent call last):
  File "/cluster/work/eirre/xai-multiworld/examples/go_to_goal.py", line 1, in <module>
    from multiworld.multigrid.envs.go_to_goal import GoToGoalEnv
  File "/cluster/work/eirre/xai-multiworld/multiworld/multigrid/envs/go_to_goal.py", line 34
    >>>>>>> 3be065569b7fee8c6fe5bfdb13e3c18886a4b203
            ^
SyntaxError: invalid decimal literal
